[package]
name = "twier-backend"
description = "The backend for twier"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license-file = "../LICENSE"
edition = "2021"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "path-all", "system-tray", "devtools"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = true
